Add theme style template

--- a/src/org/netbeans/modules/php/wordpress/resources/templates/WpThemeStyleDescription.html
+++ b/src/org/netbeans/modules/php/wordpress/resources/templates/WpThemeStyleDescription.html
@@ -5,6 +5,6 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	</head>
 	<body>
-		Create a new WordPress Plugin readme file(readme.txt).
+		Create a new WordPress Theme style file (style.css).
 	</body>
 </html>
