--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/NewProjectConfigurationPanel.form
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/NewProjectConfigurationPanel.form
@@ -43,6 +43,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="formatCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="createConfigCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="useWpCliRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="223" max="32767" attributes="0"/>
                   </Group>
@@ -71,6 +72,8 @@
                   <Component id="useLocalFileRadioButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="localFileLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="useWpCliRadioButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="formatCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -122,6 +125,16 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="useLocalFileRadioButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="useWpCliRadioButton">
+      <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="buttonGroup1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties" key="NewProjectConfigurationPanel.useWpCliRadioButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="urlLabel">
       <Properties>
