--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/CreateChildThemePanel.form
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/CreateChildThemePanel.form
@@ -19,49 +19,36 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="childDirectoryNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="childThemeNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="childDirectoryNameTextField" max="32767" attributes="0"/>
-                          <Component id="childThemeNameTextField" max="32767" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="descriptionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="childThemeUriLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="versionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="authorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="authorUriLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="tagsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="textDomainLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="textDomainTextField" max="32767" attributes="0"/>
-                          <Component id="tagsTextField" max="32767" attributes="0"/>
-                          <Component id="childThemeUriTextField" alignment="0" max="32767" attributes="0"/>
-                          <Component id="descriptionTextField" alignment="0" max="32767" attributes="0"/>
-                          <Component id="versionTextField" alignment="0" max="32767" attributes="0"/>
-                          <Component id="authorTextField" alignment="0" max="32767" attributes="0"/>
-                          <Component id="authorUriTextField" alignment="0" max="32767" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="errorLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="parentThemeLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                      <Component id="parentThemeComboBox" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="childDirectoryNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="childThemeNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="descriptionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="childThemeUriLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="versionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="authorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="authorUriLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="tagsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="textDomainLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="parentThemeLabel" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="parentThemeComboBox" alignment="0" max="32767" attributes="0"/>
+                  <Component id="childDirectoryNameTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="childThemeNameTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="childThemeUriTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="descriptionTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="versionTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="authorTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="authorUriTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="tagsTextField" alignment="0" max="32767" attributes="0"/>
+                  <Component id="textDomainTextField" alignment="0" max="32767" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" attributes="0">
+              <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
+              <Component id="errorLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="172" pref="172" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
