--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/CreateUnderscoresThemePanel.form
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/CreateUnderscoresThemePanel.form
@@ -65,7 +65,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="messageLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="34" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
